# imandrax-tools

./: .gitattributes  .gitignore  .gitmodules  404.html  README.md  dune  dune-project  dune-workspace  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build-codegen-windows.yml  checks.yml  release-codegen.yml  release-tools.yml  release.yml
codelogician-skill/: index.html
codelogician-skill/contents/SKILL/: index.html
codelogician-skill/contents/SUMMARY/: index.html
codelogician-skill/contents/advanced/avoid-higher-order-functions-in-proofs/: index.html
codelogician-skill/contents/advanced/contingency-corner/: index.html
codelogician-skill/contents/advanced/full-verification-guide/: index.html
codelogician-skill/contents/advanced/opaque-functions/: index.html
codelogician-skill/contents/advanced/proof-tips/: index.html
codelogician-skill/contents/advanced/region-decomp-advanced-features/: index.html
codelogician-skill/contents/advanced/termination-proving/: index.html
codelogician-skill/contents/codelogician-cli/: index.html
codelogician-skill/contents/error-fix-data/: index.html
codelogician-skill/contents/error-fix-data/iml_eval_corpus.json/: index.html
codelogician-skill/contents/examples/basic-iml-syntax/: index.html
codelogician-skill/contents/examples/tactics_demo.iml/: index.html
codelogician-skill/contents/extended-prelude/: index.html
codelogician-skill/contents/extended-prelude/int_conv.iml/: index.html
codelogician-skill/contents/extended-prelude/lchar_utils.iml/: index.html
codelogician-skill/contents/iml-syntax/: index.html
codelogician-skill/contents/import-syntax/: index.html
codelogician-skill/contents/reference/all-prelude-module-signatures/: index.html
codelogician-skill/contents/reference/ordinal/: index.html
codelogician-skill/contents/reference/prelude/Int/: index.html
codelogician-skill/contents/reference/prelude/LChar/: index.html
codelogician-skill/contents/reference/prelude/LString/: index.html
codelogician-skill/contents/reference/prelude/List/: index.html
codelogician-skill/contents/reference/prelude/Map/: index.html
codelogician-skill/contents/reference/prelude/Multiset/: index.html
codelogician-skill/contents/reference/prelude/Option/: index.html
codelogician-skill/contents/reference/prelude/Real/: index.html
codelogician-skill/contents/reference/tactics/: index.html
codelogician-skill/contents/region-decomp-intro/: index.html
codelogician-skill/contents/unit-testing/: index.html
codelogician-skill/contents/verification-with-verify-and-instance/: index.html
docs/: gen_skill_pages.py  index.md
docs/codelogician-skill/: index.md
docs/imandrax-api-models/: index.md  reference.md
docs/imandrax-tools/: index.md  reference.md
docs/iml-query/: index.md  reference.md
dune.lock/: atomic.pkg  cbor.pkg  conf-libcurl.pkg  conf-zlib.pkg  curl_lwt.pkg  ezcurl.pkg  imandrakit-io.pkg  imandrakit-log.pkg  imandrakit-thread.pkg  imandrakit.pkg  lock.dune  moonpool.pkg  ocurl.pkg  pbrt.pkg  pbrt_services.pkg  pbrt_yojson.pkg  picos.pkg  picos_aux.pkg  picos_std.pkg  trace.pkg  twirp_cohttp_lwt_unix.pkg  twirp_core.pkg  uuidm.pkg  yaml.pkg
imandrax-api-models/: index.html
imandrax-api-models/reference/: index.html
imandrax-tools/: index.html
imandrax-tools/reference/: index.html
iml-query/: index.html
iml-query/reference/: index.html
scripts/: github-release.sh  release-notes.sh
scripts/imandrax_error_kind/: Makefile  class-of-error-kind-json.py  main.py  pyproject.toml
search/: search_index.json
src/imandrax-codegen/: .gitignore  pyproject.toml
src/imandrax-codegen/lib/: ast.ml  dune  parse.ml  util.ml
src/imandrax-codegen/python/py_gen/: ast_deserialize.py  unparse.py
src/imandrax-codegen/scripts/: gen_model_art.py
src/imandrax-codegen/scripts/gen_fun_decomp_art/: __main__.py  data.yaml
src/imandrax-codegen/src/imandrax_codegen/: __init__.py
src/imandrax-codegen/test/: dune  test_model.ml
src/imandrax-codegen/test/data/fun_decomp/: basic.yaml  combine_into_one_yaml.sh  composite_record.yaml  multiple_parameters.yaml  nested_conditions.yaml  variant_with_data.yaml  with_basis.yaml  with_guards.yaml
src/imandrax-codegen/test/data/model/composite/: map_int_bool_0.yaml  map_int_bool_1.yaml  map_int_bool_2.yaml  multiset_nonempty.yaml  variant_and_record.yaml
src/imandrax-codegen/test/data/model/polymorphic/: ambiguous_type_name.yaml  annotated_list.yaml
src/imandrax-codegen/test/data/model/primitive/: LString.yaml  empty_list.yaml  int_option.yaml  real.yaml  record.yaml  tuple_(bool_*_int).yaml  variant1.yaml  variant3.yaml
src/imandrax-codegen/test/e2e/: cram_test_gen__model.sh  dune
(+13 files in other folders)
