[project]
name = "codelogician-harness"
version = "0.0.0"
description = "CodeLogician / ImandraX Agent Harness"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/imandrax-api-models",
    "packages/iml-query",
    "packages/imandrax-tools",
]

[tool.uv.sources]
imandrax-api-models = { workspace = true }
iml-query = { workspace = true }
imandrax-tools = { workspace = true }

[dependency-groups]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "imandrax-api-models",
    "iml-query",
    "imandrax-tools",
]

[tool.pyright]
reportMissingTypeStubs = false

[tool.ty.rules]
invalid-return-type = "ignore"
