[project]
name = "codelogician-harness"
version = "0.0.0"
description = "CodeLogician / ImandraX Agent Harness"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab-vim>=4.1.4",
]

[tool.uv.workspace]
members = [
    "packages/imandrax-api-models",
    "packages/iml-query",
    "packages/imandrax-tools",
]

[tool.uv.sources]
imandrax-api-models = { workspace = true }
iml-query = { workspace = true }
imandrax-tools = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.6.1",
    "marimo>=0.23.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "imandrax-api-models",
    "iml-query",
    "imandrax-tools",
]

[tool.pyright]
reportMissingTypeStubs = false

[tool.ty.rules]
invalid-return-type = "ignore"


[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "RUF018", # https://docs.astral.sh/ruff/rules/assignment-in-assert/
    "C90",
    "UP",
    "I",
    "D",
    "TID251",
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 15 }
ignore = [
    "D100", # ignore missing docstring in module
    "D101", # ignore missing docstring in public class
    "D102", # ignore missing docstring in public method
    "D103", # ignore missing docstring in public function
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "D106", # ignore missing docstring in public nested class
    "D107", # ignore missing docstring in __init__ methods
    "D203",
    "D212",
    "D400",
    "D401",
    "D415",
    "D200",
    "C901",
    "E731"
]
pycodestyle.ignore-overlong-task-comments = true
isort.combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["F401", "RUF100", "D", "E402", "B018"]
"data/**/*.py" = ["F401", "RUF100", "D", "E402", "B018"]

[tool.ruff.format]
quote-style = "single"
