[project]
name = "imandrax-error-kind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inline-snapshot>=0.32.6",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
python_functions = ['fetch_content']
filterwarnings = ["ignore::pytest.PytestReturnNotNoneWarning"]
