; Library for artifact loading and Python code generation

(library
 (name py_gen)
 (modules parse ast util pretty_print)
 (libraries
  imandrax-api
  imandrax-api.artifact
  imandrax-api.mir
  imandrakit
  imandrakit.twine
  yojson
  containers
  base64
  yaml
  fmt)
 (inline_tests
  (deps
   (source_tree ../examples)
   (source_tree ../test/data)))
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
